no more target blank in nav

--- a/forum.html
+++ b/forum.html
@@ -10,10 +10,10 @@
 <body>
     <nav id="niv" style="z-index: 1;">
         <ul id="Navbar">
-            <li id="nav1"> <a href="main.html" target="_blank">Home</a></li>
-            <li id="nav2"><a href="music.html" target="_blank">Music</a></li>
-            <li id="nav3"><a href="fashion.html" target="_blank">Fashion</a></li>
-            <li id="nav4"><a href="forum.html" target="_blank">Forum</a></li>
+            <li id="nav1"> <a href="main.html" >Home</a></li>
+            <li id="nav2"><a href="music.html" >Music</a></li>
+            <li id="nav3"><a href="fashion.html" >Fashion</a></li>
+            <li id="nav4"><a href="forum.html" >Forum</a></li>
         </ul>
     </nav>
     <div id="cgt">
