--- a/music.html
+++ b/music.html
@@ -104,7 +104,7 @@
 
 
     <div style="box-shadow: plum; border: 1px dotted black; width:685px; margin: 25px auto; ">
-        <p style="text-align: center; font-size: bold;"><i>Click on Song Title to Play/Pause Song</i> </p>
+        <p style="text-align: center; font-size: bold;"><em>Click on Song Title to Play/Pause Song</em> </p>
     </div>
     <div style="margin-bottom: 85px;">
     </div>
