--- a/music.html
+++ b/music.html
@@ -12,6 +12,7 @@
 <body>
     <nav id="niv" style="z-index: 1;">
         <ul id="Navbar">
+            <li id="ffs"><a href="Index.html"> <img src="webimg/favicon.png" width="30" height="30"/> </a></li>
             <li id="nav1"> <a href="main.html" >Home</a></li>
             <li id="nav2"><a href="music.html" >Music</a></li>
             <li id="nav3"><a href="fashion.html" >Fashion</a></li>
