--- a/music.html
+++ b/music.html
@@ -5,6 +5,14 @@
 <head>
     <title>DojaCat Music</title>
     <link rel="icon" type="image/x-icon" href="webimg/favicon.png">
+    <style>
+        td:first-child{
+            cursor: pointer;
+        }
+        td:first-child:hover{
+            color:rgb(214, 122, 177);
+        }
+    </style>
 </head>
 
 </html>
@@ -34,71 +42,71 @@
             <th>ALBUM</th>
         </tr>
         <tr>
-            <td onclick="PL('SoHigh')" style="cursor: pointer;">So High</td>
+            <td onclick="PL('SoHigh')" >So High</td>
             <td>2014</td>
             <td><i>Purrr!</i></td>
         </tr>
         <tr>
-            <td onclick="PL('GoToTown')" style="cursor: pointer;">Go To Town</td>
+            <td onclick="PL('GoToTown')" >Go To Town</td>
             <td rowspan="4">2018</td>
             <td rowspan="4"><i>Amala</i></td>
         </tr>
         <tr>
-            <td onclick="PL('Candy')" style="cursor: pointer;">Candy</td>
+            <td onclick="PL('Candy')" >Candy</td>
         </tr>
         <tr>
-            <td onclick="PL('MOO')" style="cursor: pointer;">Mooo!</td>
+            <td onclick="PL('MOO')" >Mooo!</td>
         </tr>
         <tr>
-            <td onclick="PL('TiaTamera')" style="cursor: pointer;">Tia Tamera</td>
+            <td onclick="PL('TiaTamera')" >Tia Tamera</td>
         </tr>
         <tr>
-            <td onclick="PL('Juicy')" style="cursor: pointer;">Juicy</td>
+            <td onclick="PL('Juicy')" >Juicy</td>
             <td rowspan="4">2019</td>
             <td rowspan="5"><i>Hot Pink</i></td>
         </tr>
         <tr>
-            <td onclick="PL('Bott')" style="cursor: pointer;">Bottom Bitch</td>
+            <td onclick="PL('Bott')" >Bottom Bitch</td>
         </tr>
         <tr>
-            <td onclick="PL('Rules')" style="cursor: pointer;">Rules</td>
+            <td onclick="PL('Rules')" >Rules</td>
         </tr>
         <tr>
-            <td onclick="PL('Cyber')" style="cursor: pointer;">Cyber Sex</td>
+            <td onclick="PL('Cyber')" >Cyber Sex</td>
         </tr>
         <tr>
-            <td onclick="PL('SaySo')" style="cursor: pointer;">Say So</td>
+            <td onclick="PL('SaySo')" >Say So</td>
             <td rowspan="5">2020</td>
         </tr>
         <tr>
-            <td onclick="PL('BB')" style="cursor: pointer;">Boss Bitch</td>
+            <td onclick="PL('BB')" >Boss Bitch</td>
             <td><i>Birds of Prey:The Album</i></td>
         </tr>
         <tr>
-            <td onclick="PL('LikeThat')" style="cursor: pointer;">Like That</td>
+            <td onclick="PL('LikeThat')" >Like That</td>
             <td><i>Hot Pink</i></td>
         </tr>
         <tr>
-            <td onclick="PL('Del')" style="cursor: pointer;">Del Mar</td>
+            <td onclick="PL('Del')" >Del Mar</td>
             <td><i>ENOC</i></td>
         </tr>
         <Tr>
-            <td onclick="PL('Streets')" style="cursor: pointer;">Streets</td>
+            <td onclick="PL('Streets')" >Streets</td>
             <td><i>Hot Pink</i></td>
         </Tr>
         <tr>
-            <td onclick="PL('Kiss')" style="cursor: pointer;">Kiss Me More</td>
+            <td onclick="PL('Kiss')" >Kiss Me More</td>
             <td rowspan="4">2021</td>
             <td rowspan="4">Planet Her</td>
         </tr>
         <tr>
-            <td onclick="PL('you')" style="cursor: pointer;">You Right</td>
+            <td onclick="PL('you')" >You Right</td>
         </tr>
         <tr>
-            <td onclick="PL('need')" style="cursor: pointer;">Need To Know</td>
+            <td onclick="PL('need')" >Need To Know</td>
         </tr>
         <tr>
-            <td onclick="PL('Woman')" style="cursor: pointer;">Woman</td>
+            <td onclick="PL('Woman')" >Woman</td>
         </tr>
 
     </table>
