made index responsive

--- a/Index.html
+++ b/Index.html
@@ -8,11 +8,12 @@
 </head>
 
 <body style="background-image: url('webimg/backg.jpg'); background-size: cover;">
+    <div id="indexcontainer">
 
     <div id="sit" onclick="PL('open');rd('main.html');">ENTER DOJA CAT WORLD</div>
 
 
-    <figure><img id="imgh" src="webimg/dojatrns.png" alt="Doja Planet Her" onclick="PL('get')"></figure>
+    <figure id="figindex"><img id="imgh" src="webimg/dojatrns.png" alt="Doja Planet Her" onclick="PL('get')"></figure>
     <audio id="get" src="webaud/Get.mp3"></audio>
     <audio id="open" src="webaud/OPEN.mp3"></audio>
     <br>
@@ -26,6 +27,7 @@
                         src="webimg/youtube.png" style="width: 57px; margin: 10px 20px 0px 20px;"></a></li>
         </ol>
     </div>
+</div>
     <script src="functions.js"></script>
 </body>
 
