--- a/fashion.html
+++ b/fashion.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
     <title>DojaCat Fashion</title>
     <link rel="icon" type="image/x-icon" href="webimg/favicon.png">
