--- a/Index.html
+++ b/Index.html
@@ -8,27 +8,29 @@
     <link rel="icon" type="image/x-icon" href="webimg/favicon.png">
 </head>
 
-<body style="background-image: url('webimg/backg.jpg'); background-size: cover;">
+<body style="background-image: url('webimg/backg.jpg'); background-size: cover; ">
     <div id="indexcontainer">
 
-    <div id="sit" onclick="PL('open');rd('main.html');">ENTER DOJA CAT WORLD</div>
+        <div id="sit" onclick="PL('open');rd('main.html');">ENTER DOJA CAT WORLD</div>
 
 
-    <figure id="figindex"><img id="imgh" src="webimg/dojatrns.png" alt="Doja Planet Her" onclick="PL('get')"></figure>
-    <audio id="get" src="webaud/Get.mp3"></audio>
-    <audio id="open" src="webaud/OPEN.mp3"></audio>
-    <br>
-    <div id="con">
-        <ol style="list-style-type: none; display: inline;">
-            <li style="float: left;"><a href="https://www.instagram.com/dojacat/?hl=en" target="_blank"> <img id="insta"
-                        src="webimg/insta.png" style="width: 65px;"></a></li>
-            <li style="float: left;"><a href="https://www.facebook.com/DojaCat" target="_blank"> <img id="fb" src="webimg/facebook.svg"
-                        style="width: 54px; margin:0px 20px 0px 20px"></a></li>
-            <li style="float: left;"><a href="https://www.youtube.com/channel/UCzpl23pGTHVYqvKsgY0A-_w" target="_blank"> <img id="ytb"
-                        src="webimg/youtube.png" style="width: 57px; margin: 10px 20px 0px 20px;"></a></li>
-        </ol>
+        <figure id="figindex"><img id="imgh" src="webimg/dojatrns.png" alt="Doja Planet Her" onclick="PL('get')">
+        </figure>
+        <audio id="get" src="webaud/Get.mp3"></audio>
+        <audio id="open" src="webaud/OPEN.mp3"></audio>
+        <br>
+        <footer id="con" class="aln">
+            <ol style="list-style-type: none; display: inline;">
+                <li style="float: left;"><a href="https://www.instagram.com/dojacat/?hl=en" target="_blank"> <img
+                            id="insta" src="webimg/insta.png" style="width: 65px;" class="po"></a></li>
+                <li style="float: left;"><a href="https://www.facebook.com/DojaCat" target="_blank"> <img id="fb"
+                            src="webimg/facebook.svg" style="width: 54px; margin:0px 20px 0px 20px" class="po"></a></li>
+                <li style="float: left;"><a href="https://www.youtube.com/channel/UCzpl23pGTHVYqvKsgY0A-_w"
+                        target="_blank"> <img id="ytb" src="webimg/youtube.png"
+                            style="width: 57px; margin: 10px 20px 0px 0px;" class="po"></a></li>
+            </ol>
+        </footer>
     </div>
-</div>
     <script src="functions.js"></script>
 </body>
 
