--- a/main.html
+++ b/main.html
@@ -2,21 +2,24 @@
 <html>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <head>
     <title>DojaCat Home</title>
     <link rel="icon" type="image/x-icon" href="webimg/favicon.png">
 </head>
 
 <body>
-    <nav id="niv" style="z-index: 1;">
-        <ul id="Navbar">
-            <li id="ffs"><a href="Index.html"> <img src="webimg/favicon.png" width="30" height="30"/> </a></li>
-            <li id="nav1"> <a href="main.html" >Home</a></li>
-            <li id="nav2"><a href="music.html" >Music</a></li>
-            <li id="nav3"><a href="fashion.html" >Fashion</a></li>
-            <li id="nav4"><a href="forum.html" >Forum</a></li>
-        </ul>
-    </nav>
+    <div class="topnav" id="myTopnav">
+        <a href="Index.html"> <img src="webimg/favicon.png" width="30" height="30" /> </a>
+        <a href="main.html">Home</a>
+        <a href="music.html">Music</a>
+        <a href="fashion.html">Fashion</a>
+        <a href="forum.html">Forum</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            Menu
+        </a>
+    </div>
+
     <div id="cgt">
         <label class="Verdana" id="gt" for="Glitter">Let's Moo!</label>
         <input type="checkbox" id="Glitter" onclick="background()">
@@ -36,7 +39,7 @@
             <img src="webimg/doja5.jpg" alt="DojaCat MOOOOO" style="width: 100%;" />
         </figure>
     </div>
-   
+
     </br>
 
     <div id="pbx">
@@ -117,7 +120,8 @@
                 <br>Her father, <b>Dumisani Dlamini</b>, is a South African actor, composer and film producer of Zulu
                 ethnicity best known for Sarafina! <br>Doja Cat has stated that her father was absent from her childhood
                 and has claimed that she has "never met him."
-                She explained to <b>The Fader</b> that she did not <q> hold grudges against him or anything in any way, but
+                She explained to <b>The Fader</b> that she did not <q> hold grudges against him or anything in any way,
+                    but
                     obviously it’s a little weird </q> that he would actively comment on her Instagram posts about how
                 proud he
                 was.
@@ -278,7 +282,8 @@
                 the 2020 BET Awards. Within June 2020, Doja Cat donated 100 thousand dollars to the <i>Justice
                     For Breonna Taylor Fund</i>, released the music video for "Like That", and uploaded the song
                 "Unisex Freestyle" to SoundCloud.
-                <br><br> On June 24, 2020. Doja Cat went on an Instagram Live session and teased multiple new songs which
+                <br><br> On June 24, 2020. Doja Cat went on an Instagram Live session and teased multiple new songs
+                which
                 she stated would all be released together in an upcoming project. Songs Doja Cat played included
                 previously teased tracks "N*ggas Ain't Shit" and "Up and Down".
                 Doja Cat also mentioned an upcoming collaboration with American singer <b>Ariana Grande</b>
@@ -345,10 +350,13 @@
         </section>
     </div>
 
-    <div style="margin-bottom: 85px;">
-        <p style="font-variant: small-caps;text-align: right;"><i>information taken from : <a style="text-decoration: none; color: black;" href="https://dojacat.fandom.com/wiki/Doja_Cat?action=edit" target="_blank">dojacat.fandom.com/wiki/Doja_Cat</a></i></p>
+    <div>
+        <p style="font-variant: small-caps;text-align: right;"><i>information taken from : <a
+                    style="text-decoration: none; color: black;"
+                    href="https://dojacat.fandom.com/wiki/Doja_Cat?action=edit"
+                    target="_blank">dojacat.fandom.com/wiki/Doja_Cat</a></i></p>
     </div>
-    <footer>
+    <footer class="foot">
         <p>Website Made by Line</p>
         <p>All Content is fully copyrighted by Doja Cat</p>
         <p>This is a pure Fan-Made Website with no intention of selling copyrighted content </p>
