--- a/music.html
+++ b/music.html
@@ -21,7 +21,7 @@
 
 <body>
     <div class="topnav" id="myTopnav">
-        <a href="Index.html"> <img src="webimg/favicon.png" width="30" height="30" /> </a>
+        <a href="index.html"> <img src="webimg/favicon.png" width="30" height="30" /> </a>
         <a href="main.html">Home</a>
         <a href="music.html">Music</a>
         <a href="fashion.html">Fashion</a>
